Optimize file sorting and ordering logic in ImageUtils
- Refactor file sorting method to use stream operations
- Directly set order index during sorting process
- Remove redundant loop for setting order index
- Improve code readability and efficiency